fix style issues especially on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@
 	cursor: var(--cursor);
 }
 
-html {
+html,
+body {
 	height: 100%;
+	width: 100%;
 }
